--- a/package.json
+++ b/package.json
@@ -1,32 +1,28 @@
 {
   "name": "tankcode",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "jest --watchAll",
-    "build": "webpack",
-    "server": "webpack-dev-server"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "monaco-editor": "^0.34.1"
+    "@element-plus/icons-vue": "^2.0.10",
+    "element-plus": "^2.2.28",
+    "pinia": "^2.0.28",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
-    "jest": "^29.3.1",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.6",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1",
-    "babel-loader": "^9.1.0",
-    "css-loader": "^6.7.3",
-    "html-webpack-plugin": "^5.5.0",
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "eslint": "^8.22.0",
+    "eslint-plugin-vue": "^9.3.0",
     "less": "^4.1.3",
-    "less-loader": "^11.1.0"
+    "prettier": "^2.7.1",
+    "vite": "^4.0.0"
   }
 }
