--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "element-plus": "^2.2.28",
+    "github-markdown-css": "^5.1.0",
+    "highlight.js": "^11.7.0",
+    "markdown-it": "^13.0.1",
     "monaco-editor-vue3": "^0.1.6",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
