--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "markdown-it": "^13.0.1",
     "monaco-editor-vue3": "^0.1.6",
     "pinia": "^2.0.28",
-    "terser": "^5.16.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -28,6 +27,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "less": "^4.1.3",
     "prettier": "^2.7.1",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "terser": "^5.16.3"
   }
 }
