--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "axios": "^1.3.4",
     "element-plus": "^2.2.28",
     "github-markdown-css": "^5.1.0",
     "highlight.js": "^11.7.0",
@@ -27,7 +28,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "less": "^4.1.3",
     "prettier": "^2.7.1",
-    "vite": "^4.0.0",
-    "terser": "^5.16.3"
+    "terser": "^5.16.3",
+    "vite": "^4.0.0"
   }
 }
